--- a/webview-rust/web-view/Cargo.toml
+++ b/webview-rust/web-view/Cargo.toml
@@ -1,10 +1,9 @@
 [package]
-name = "webview"
+name = "webview-sample"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-wry = "0.22.0"
-anyhow = "*"
+web-view = { version = "0.7.3", features = ["edge"] }
